# sstp-client

./: .gitlab-ci.yml  .projectinfo  AUTHORS  CONTRIBUTING  ChangeLog  DEVELOPERS  Makefile.am  NEWS  Portfile  README.md  autogen.sh  configure.ac  sstp-client.spec
debian/: changelog  control  copyright  libsstp-api-0-dev.install  libsstp-api-0.install  libsstp-api-0.symbols  rules  sstp-client.install  sstp-client.manpages  sstp-client.postinst  sstp-client.postrm  watch
src/: Makefile.am  sstp-client.c  sstp-client.h  sstp-option.c  sstp-pppd.c  sstp-pppd.h  sstp-private.h  sstp-state.c  sstp-state.h  sstp-stream.c  sstp-util.c
src/pppd-plugin/: Makefile.am  sstp-mppe.c  sstp-mppe.h  sstp-plugin.c
